# slideforge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: 汎用ビジネス提案書_MinimalGray.pptx  汎用ビジネス提案書_TechBlue.pptx  汎用ビジネス提案書_WarmCreative.pptx
samples/: 汎用ビジネス提案書.md
slideforge/: __init__.py  autofit.py  cli.py  layout_engine.py  md_parser.py  parser.py  renderer.py  sample.py  themes.py
tests/: test_slideforge.py
