[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slideforge"
version = "0.1.0"
description = "Generate professional PowerPoint decks from Markdown with automatic layout detection, themes, and text auto-fit"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "NagaYu" }]
keywords = ["powerpoint", "pptx", "markdown", "slides", "presentation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = ["python-pptx>=1.0"]

[project.scripts]
slideforge = "slideforge.cli:main"

[project.urls]
Homepage = "https://github.com/NagaYu/slideforge"
Repository = "https://github.com/NagaYu/slideforge"
Issues = "https://github.com/NagaYu/slideforge/issues"

[tool.setuptools]
packages = ["slideforge"]
