[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slideforge"
version = "0.2.0"
description = "Generate professional PowerPoint decks from Markdown with themes and automatic layout detection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SlideForge contributors" }]
keywords = ["powerpoint", "pptx", "markdown", "slides", "presentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Office Suites",
]
dependencies = ["python-pptx>=0.6.21"]

[project.scripts]
slideforge = "slideforge.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["slideforge*"]
